# social-media-gen-llm-python

./: README.md  app-3-no-summary.py  app.py  pyproject.toml
_old/: app-1-w-summary.py  app-2-unstyled.py
modules/: image_generator.py  post_generator.py  scrape_summary.py  utils.py
